--- a/contact-us.html
+++ b/contact-us.html
@@ -17,154 +17,165 @@
 <body>
   <header>
     <section class="navbar-section">
-      <div class="container">
-        <div class="d-flex justify-content-between">
-          <a class="fs-3 hammer" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-            aria-controls="offcanvasExample">
-            <i class="fa-solid fa-bars searchglass"></i>
-          </a>
-          <div class="nav-sign-btn">
-            <a href="index.html" class="btn"><img src="img/logo (1).png" alt="" width="90px"></a>
-          </div>
-          <div class="nav-sign-btn">
-            <a href="Login-page.html" class="btn">Login</a>
-            <a href="Sign-up.html" class="btn">Register</a>
-          </div>
-        </div>
-        <div class="offcanvas  offcanvas-start" tabindex="-1" id="offcanvasExample"
-          aria-labelledby="offcanvasExampleLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a href="javascript:void(0)"><i
-                  class="fa-solid fa-magnifying-glass text-dark fs-4"></i></a></h5>
-            <button type="button" class="btn-close " data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <div class="mb-3 border-2 border-bottom">
-              <img class="img-fluid rounded-circle"
-                src="https://ik.imagekit.io/gku4adhog/first-fly-travel/testimonial2img.png?updatedAt=1714374953317"
-                alt="" width="120px">
-              <div class="text-white text-end profile-owner ms-4">
-                <h4><img class="img-fluid me-2" src="img/Ellipse 9.png" alt="">Client</h4>
-              </div>
+        <div class="container">
+            <div class="d-flex justify-content-between">
+                <a class="fs-3 hammer" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
+                    aria-controls="offcanvasExample">
+                    <i class="fa-solid fa-bars searchglass"></i>
+                </a>
+                <div class="nav-sign-btn">
+                    <a href="index.html" class="btn"><img src="img/logo (1).png" alt="" width="90px"></a>
+                </div>
+                <div class="nav-sign-btn">
+                    <a href="Login-page.html" class="btn">Login</a>
+                    <a href="Sign-up.html" class="btn">Register</a>
+                </div>
             </div>
-            <ul class="p-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Service</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
+            <div class="offcanvas  offcanvas-start" tabindex="-1" id="offcanvasExample"
+                aria-labelledby="offcanvasExampleLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasExampleLabel"><a href="javascript:void(0)"><i
+                                class="fa-solid fa-magnifying-glass text-dark fs-4"></i></a></h5>
+                    <button type="button" class="btn-close " data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <div class="mb-3 border-2  d-flex align-items-center">
+                        <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                        <div class="text-white  profile-owner ms-2">
+                            <h4>Personal Account</h4>
+                            <span>Personal Account</span>
+                        </div>
+                    </div>
+                    <div class="view-site-or-profile">
+                        <h5 class="">View site / profile</h5>
+                    </div>
+                    <ul class="p-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="categories.html">Categeory</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cart.html">Cart</a>
+                        </li>
 
-              <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item ">
-                  <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                      data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false"
-                      aria-controls="flush-collapseOne">
-                      Accordion
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                    data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder</div>
-                  </div>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item ">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                        aria-expanded="false" aria-controls="flush-collapseOne">
+                                        Accordion
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder</div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingTwo">
+                                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                        aria-expanded="false" aria-controls="flush-collapseTwo">
+                                        All Product
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">onstrate</div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                        aria-expanded="false" aria-controls="flush-collapseThree">
+                                        Whishlist
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder</div>
+                                </div>
+                            </div>
+                        </div>
+                    </ul>
+                    <ul class="offcanvas-social-icons p-0">
+                        <li>
+                            <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f text-info"></i></a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)"><i class="fa-brands fa-instagram text-danger"></i></a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in text-primary"></i></a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)"><i class="fa-brands fa-twitter text-success"></i></a>
+                        </li>
+                    </ul>
+                    <div class="offcanvas-left-call-btn">
+                        <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
+                                alt="" width="50px" height="60px">Contact Us</a>
+                    </div>
                 </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                      data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                      aria-controls="flush-collapseTwo">
-                      All Product
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                    data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">onstrate</div>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button border-0 shadow-none collapsed" type="button"
-                      data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false"
-                      aria-controls="flush-collapseThree">
-                      Whishlist
-                    </button>
-                  </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-                    data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder</div>
-                  </div>
-                </div>
-              </div>
-            </ul>
-            <ul class="offcanvas-social-icons p-0">
-              <li>
-                <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f text-info"></i></a>
-              </li>
-              <li>
-                <a href="javascript:void(0)"><i class="fa-brands fa-instagram text-danger"></i></a>
-              </li>
-              <li>
-                <a href="javascript:void(0)"><i class="fa-brands fa-linkedin-in text-primary"></i></a>
-              </li>
-              <li>
-                <a href="javascript:void(0)"><i class="fa-brands fa-twitter text-success"></i></a>
-              </li>
-            </ul>
-            <div class="offcanvas-left-call-btn">
-              <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif" alt=""
-                  width="50px" height="60px">Contact Us</a>
             </div>
-          </div>
-        </div>
 
-        <ul class="navbar-bottom-nav border-1 p-0 border-top">
-          <li>
-            <a href="javascript:void(0)">home</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">Shop</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">About us</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">Blogs</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">Pages</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">FAQ's</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)">Features</a>
-          </li>
-          <li>
-            <a href="javascript:void(0)"><i class="fa-solid fa-user fs-5 text-danger  px-2 py-2 rounded-pill bg-white"></i></a>
-          </li>
-          <li>
-            <a href="javascript:void(0)"><i class="fa-solid fa-lock fs-5 text-success border px-2 py-2 rounded-pill bg-white"></i></a>
-          </li>
-          <li>
-            <a href="javascript:void(0)"><i class="fa-solid fa-cart-plus fs-5 text-dark border px-2 py-2 rounded-pill bg-white"></i></a>
-          </li>
-        </ul>
-        <div class="text-center header-input-body mx-auto">
-          <input type="text" class="header-input" placeholder="Search Products" name="" id="">
-          <div  class="header-input-body-glass">
-            <a href=""><i class="fa-solid fa-magnifying-glass text-dark"></i></a>
-          </div>
+            <ul class="navbar-bottom-nav border-1 p-0 border-top">
+                <div class="d-flex mx-auto ">
+                    <li>
+                        <a href="index.html">home</a>
+                    </li>
+                    <li>
+                        <a href="categories.html">Categeory</a>
+                    </li>
+                    <li>
+                        <a href="About-Us.html">About us</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Blogs</a>
+                    </li>
+                    <li>
+                        <a href="Projects.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="cart.html">Cart</a>
+                    </li>
+                    <li>
+                        <a href="faq.html">FAQ's</a>
+                    </li>
+
+                </div>
+                <div class="d-flex ">
+                    <li>
+                        <a href="profile.html"><i
+                                class="fa-solid fa-user  text-danger  px-2 py-2 rounded-circle bg-white"></i></a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)"><i
+                                class="fa-solid fa-lock  text-success border px-2 py-2 rounded-circle bg-white"></i></a>
+                    </li>
+                    <li>
+                        <a href="cart.html"><i
+                                class="fa-solid fa-cart-plus  text-dark border px-2 py-2 rounded-circle bg-white"></i></a>
+                    </li>
+                </div>
+            </ul>
+            <div class="text-center header-input-body mx-auto">
+                <input type="text" class="header-input h-100" placeholder="Search Products" name="" id="">
+                <div class="header-input-body-glass">
+                    <a href="" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
-  </header>
+</header>
 
     <main role="main">
         <style>
