--- a/faq.html
+++ b/faq.html
@@ -197,8 +197,8 @@
                                         <div class="header text-white d-flex align-items-center p-1">
                                             <img class="img-fluid rounded-circle me-2" width="40px" src="./img/About-Us person.jpg"
                                                 alt="Avatar" class="header-image">
-                                            <div class="chat-title">ChatBot</div>
-                                            <i class="fas fa-circle icon"></i>
+                                            <div class="chat-title ms-1">ChatBot</div>
+                                            <i class="fas fa-circle icon ms-2"></i>
                                         </div>
                 
                                         <div class="chat-container" id="chatContainer"></div>
